fixed memoized title and z-index

--- a/components/ProgressBar/ProgressBar.module.scss
+++ b/components/ProgressBar/ProgressBar.module.scss
@@ -49,7 +49,6 @@
 
 .step {
   position: relative;
-  z-index: 10;
   display: flex;
   justify-content: center;
   align-items: center;
